src/objects/Case_Service_Code__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Materials_Amount_Approved__c</fullName>
        <label>Additional Materials Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Materials_Amount_Requested__c</fullName>
        <label>Additional Materials Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Model__c</fullName>
        <formula>Case__r.Asset.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_PCL__c</fullName>
        <formula>Case__r.Asset.Product_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset PCL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Serial_Number__c</fullName>
        <formula>Case__r.Asset.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Ship_Date__c</fullName>
        <formula>Case__r.Asset.Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Startup_Date__c</fullName>
        <formula>Case__r.Asset.Startup_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Startup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Calc__c</fullName>
        <formula>Case__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Service Codes</relationshipLabel>
        <relationshipName>Case_Service_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currency_Text__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Parts_Amount_Approved__c</fullName>
        <label>Daikin Parts Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daikin_Parts_Amount_Requested__c</fullName>
        <label>Daikin Parts Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Approved__c</fullName>
        <label>Hours Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Requested__c</fullName>
        <label>Hours Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Amount_Approved__c</fullName>
        <label>Labor Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Amount_Requested__c</fullName>
        <label>Labor Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MajorCalc__c</fullName>
        <formula>MajorCode__r.Name + &apos; &apos;+ MajorCode__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Major</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Case Service Codes (Major)</relationshipLabel>
        <relationshipName>Case_Service_Codes4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModeCalc__c</fullName>
        <formula>ModeCode__r.Name + &apos; &apos;+ ModeCode__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModeCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mode</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Case Service Codes (Mode)</relationshipLabel>
        <relationshipName>Case_Service_Codes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <formula>Case__r.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibilityCalc__c</fullName>
        <formula>Responsibility__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ResponsibilityCalc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsibility</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Case Service Codes (Responsibility)</relationshipLabel>
        <relationshipName>Case_Service_Codes6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Special Type</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Case Service Codes (Special Type)</relationshipLabel>
        <relationshipName>Case_Service_Codes7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpecificCalc__c</fullName>
        <formula>SpecificCode__r.Name + &apos; &apos;+ SpecificCode__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specific</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecificCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specific</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Case Service Codes (Specific)</relationshipLabel>
        <relationshipName>Case_Service_Codes5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Approved__c</fullName>
        <formula>Labor_Amount_Approved__c + Additional_Materials_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeCalc__c</fullName>
        <formula>TypeCode__r.Name + &apos; &apos;+ TypeCode__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Case Service Codes (Type)</relationshipLabel>
        <relationshipName>Case_Service_Codes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitCalc__c</fullName>
        <formula>UnitCode__r.Name + &apos; &apos;+ UnitCode__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Case Service Codes (Unit)</relationshipLabel>
        <relationshipName>Case_Service_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WarrantyClassCalc__c</fullName>
        <formula>WarrantyClassCode__r.Name + &apos; &apos;+ WarrantyClassCode__r.Label__c</formula>
        <label>Warranty Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyClassCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Warranty Class</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Case Service Codes (Warranty Class)</relationshipLabel>
        <relationshipName>Case_Service_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Parts_Amount_Approved__c</fullName>
        <label>3rd-Party Parts Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Parts_Amount_Requested__c</fullName>
        <label>3rd-Party Parts Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Case Service Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent_Case__c</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Business_Unit_Calc__c</columns>
        <columns>WarrantyClassCalc__c</columns>
        <columns>UnitCalc__c</columns>
        <columns>UnitCode__c</columns>
        <columns>ModeCalc__c</columns>
        <columns>ModeCode__c</columns>
        <columns>TypeCalc__c</columns>
        <columns>MajorCode__c</columns>
        <columns>SpecificCalc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Case Service Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Service Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>